--- a/scss/blocks/_specialization.scss
+++ b/scss/blocks/_specialization.scss
@@ -7,13 +7,15 @@
 	}
 
 	&__grid {
-		@include layout-grid(1.5fr 1fr, 5rem);
-		height: 40rem;
+		@include layout-grid(1.5fr 1fr, clamp(1rem, calc(1rem + ((1vw - 0.32rem) * 2.8409)), 5rem));
+		min-height: 40rem;
 	}
 
 	&__col:first-of-type {
 		overflow: auto;
 		padding-right: 2rem;
+		max-height: 40rem;
+		
 	
 		&::-webkit-scrollbar {
 			background-color: $clr-baseUltraDark;
@@ -36,11 +38,69 @@
 		ul {
 			margin-top: 2rem;
 			list-style-type: none;
+			display: flex;
+			flex-direction: column;
+			gap: 1.7rem;
 	
 			li {
-				line-height: 200%;
 				font-size: 2rem;
 			}
 		}
+	}
+}
+
+@include laptop {
+	.specialization__col:first-of-type {
+		max-height: 46rem;
+	}
+}
+
+@include tablet-s {
+	.specialization__col:first-of-type {
+		max-height: 48rem;
+	}
+}
+
+@include s {
+	.specialization__col:first-of-type {
+		max-height: 54rem;
+	}
+}
+
+@include mobile-landscape {
+	.specialization__grid {
+		grid-template-columns: 1fr;
+	}
+
+	.specialization__col:first-of-type {
+		max-height: 30rem;
+		height: 100%;
+
+		p {
+			font-size: 1.8rem;
+			text-align: center;
+			margin-bottom: 2rem;
+		}
+	}
+
+	.specialization__col:last-of-type {
+		display: flex;
+		flex-direction: column;
+
+		b {
+			font-size: 2rem;
+			text-align: center;
+		}
+
+		ul li {
+			font-size: 1.8rem;
+			text-align: center;
+		}
+	}
+}
+
+@include xxxs {
+	.specialization h2 {
+		margin-bottom: 2rem;
 	}
 }
