--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,8 @@
 @import 'base';
 @import './components/buttons';
 @import './components/links';
+@import './components/hamburger';
+@import './blocks/preloader';
 @import './blocks/header';
 @import './blocks/hero';
 @import './blocks/progress';
