--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -3,7 +3,7 @@ footer {
 }
 
 .container__footer {
-	@include layout-grid(1fr auto 1fr, 0, center);
+	@include layout-grid(1fr 1fr, 0, center);
 	@extend %width-100;
 }
 
@@ -19,12 +19,44 @@ footer {
 	}
 }
 
-.networks {
-	@include layout-flex(row, 1rem, center);
-	justify-self: end;
+// .networks {
+// 	@include layout-flex(row, 1rem, center);
+// 	justify-self: end;
 	
-	a:last-of-type {
-		margin-left: 4rem;
-		font-size: 1.8rem;
+// 	a:last-of-type {
+// 		margin-left: 4rem;
+// 		font-size: 1.8rem;
+// 	}
+// }
+
+.networks {
+	display: flex;
+	align-items: center;
+	justify-content: end;
+	gap: 2rem;
+}
+
+.footer__social {
+	display: flex;
+	gap: .5rem;
+}
+
+@include s {
+	.container__footer {
+		grid-template-columns: 1fr;
+		align-items: center;
+		gap: 4rem;
+	}
+
+	.copyright {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		text-align: center;
+	}
+
+	.networks {
+		flex-direction: column;
+		justify-content: center;
 	}
 }
