--- a/scss/blocks/_price.scss
+++ b/scss/blocks/_price.scss
@@ -12,7 +12,7 @@
 			@include layout-flex(row, 0, center);
 
 			span {
-				font-size: 4.8rem;
+				font-size: clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 1.9886)), 4.8rem);
 				font-weight: 700;
 				@extend %text-gradientHorizont;
 				margin-left: -8rem;
@@ -37,7 +37,7 @@
 				@include layout-flex(row, 0, center);
 
 				span {
-					font-size: 4.8rem;
+					font-size: clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 1.9886)), 4.8rem);
 					font-weight: 700;
 					@extend %text-gradientHorizont;
 					margin-left: -8rem;
@@ -49,6 +49,7 @@
 				line-height: 170%;
 				margin-left: 15rem;
 				color: $clr-baseNormal;
+				max-width: 40ch
 			}
 		}
 
@@ -63,5 +64,53 @@
 				font-size: 2.4rem;
 			}
 		}
+	}
+}
+
+@include laptop {
+	.price {
+		&__grid {
+			grid-template-columns: 1fr;
+			gap: 4rem;
+		}
+		&__item:first-of-type {
+			grid-template-columns: 1fr;
+			width: 100%;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			gap: 2rem;
+
+			.link--secondary {
+				margin-top: 5rem;
+			}
+		}
+		&__item:last-of-type {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin-top: 5rem;
+		}
+	}
+
+	.price__item:nth-child(2) div:first-of-type span {
+		text-align: center;
+		margin-left: 8rem;
+	}
+
+	.price__item:nth-child(2) div:first-of-type p {
+		margin-top: 2rem;
+		margin-left: 0rem;
+		text-align: center;
+	}
+
+	.price__item:nth-child(2) .price__var {
+		margin-top: 3rem;
+	}
+}
+
+@include xxxs {
+	.price h2 {
+		margin-bottom: 2rem;
 	}
 }
