Add Responsive header

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,41 +1,87 @@
 header {
-	@extend %width-100;
+	background-color: var(--clr-background);
 	position: absolute;
-	z-index: 30;
+	width: 100%;
+	z-index: 100;
 }
 
 .header__container {
-	@include layout-grid(1fr max-content 1fr);
+	height: 100%;
+	display: flex;
 	justify-content: space-between;
-	padding: 2rem clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 2.8409)), 6rem);
-}
-
-nav ul {
-	@include layout-flex(row, clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 1.4205)), 4rem));
-	justify-content: center;
-	margin-top: 1.3rem;
-	font-size: $fontSize-XS;
+	padding: 0 clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 1.4205)), 4rem);
+	margin-top: 2rem;
 }
 
 .logo {
 	width: clamp(6rem, calc(6rem + ((1vw - 0.32rem) * 2.8409)), 10rem);
 }
 
-.navlink {
-	height: fit-content;
-	transition: color 300ms ease-in-out;
-
-	&:hover {
-		color: $clr-primary;
-	}
+nav {
+	position: absolute;
+	top: 100%;
+	left: 0;
+	width: 100%;
+	transform: scale(1, 0);
+	transform-origin: top;
+	transition: transform ease-in-out 300ms;
+	padding: 2rem 0;
+	
 }
 
-@include tablet-l {
-	.header__container {
-		grid-template-columns: 1fr max-content;
-	}
+nav ul {
+	margin: auto;
+	padding: clamp(2rem, calc(2rem + ((1vw - 0.32rem) * 1.4205)), 4rem);
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	background-color: $clr-background;
+}
 
-	nav {
+
+.navlink {
+	padding: 1rem 0;
+	transition: color 300ms ease-in-out;
+	opacity: 0;
+	transition: opacity 100ms ease-in-out;
+	width: fit-content;
+}
+
+.navlink:hover {
+	color: blue;
+}
+
+.btn__wrap {
+	display: flex;
+	gap: 2rem;
+}
+
+.btn--primary {
+	display: none;
+}
+
+@media (min-width: 1024px) {
+	.header__container {
+		grid-template-columns: 1fr 3fr 1fr;
+		margin-top: 4rem;
+	}
+	.burger-menu {
 		display: none;
 	}
+	nav {
+		all: unset;
+	}
+	.navlink {
+		opacity: 1;
+	}
+	nav ul {
+		flex-direction: row;
+		padding: 0;
+		gap: 3rem;
+		background-color: transparent;
+		justify-content: center;
+	}
+	.btn--primary {
+		display: block;
+	}	
 }
