--- a/scss/components/_hamburger.scss
+++ b/scss/components/_hamburger.scss
@@ -24,7 +24,7 @@
 .burger-menu span::before,
 .burger-menu span::after {
 	display: block;
-	background-color: blueviolet;
+	background-color: white;
 	height: .2rem;
 	width: 100%;
 	border-radius: 10rem;
