--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ a {
   color: inherit;
 }
 
-.container__footer, .price__grid, .plus__grid, .vision__col:last-of-type picture:last-of-type, .vision__col:first-of-type, .vision__grid, .style__photo-wrap img, .style__col:first-of-type, .style__grid, .about__grid img, .progress__bottom, .progress__grid .large-img, .progress__grid, header, .vision__col:last-of-type img, .progress__grid .progress__images__inner img, .progress__grid .progress__images, .hero__content, video, .preloader {
+.container__footer, .price__grid, .plus__grid, .vision__col:last-of-type picture:last-of-type, .vision__col:first-of-type, .vision__grid, .style__photo-wrap img, .style__col:first-of-type, .style__grid, .about__grid img, .progress__bottom, .progress__grid .large-img, .progress__grid, .vision__col:last-of-type img, .progress__grid .progress__images__inner img, .progress__grid .progress__images, .hero__content, video, .preloader {
   width: 100%;
 }
 
@@ -136,11 +136,11 @@ footer, .contacts, section {
   border-radius: clamp(0.2rem, 0.2rem + (1vw - 0.32rem) * 1.2784, 2rem);
 }
 
-.container__footer, .price__grid, .plus__card div, .vision__grid, .style__grid, .specialization__grid, .progress__bottom__item, .progress__bottom, .progress__grid .progress__images, .progress__grid, .header__container {
+.container__footer, .price__grid, .plus__card div, .vision__grid, .style__grid, .specialization__grid, .progress__bottom__item, .progress__bottom, .progress__grid .progress__images, .progress__grid {
   display: grid;
 }
 
-.copyright, .price__item:nth-child(2) .price__var, .price__item:nth-child(2) div:first-of-type div, .price__item:nth-child(2), .price__item:first-of-type div:first-of-type, .style__col:last-of-type ul li, nav ul, .preloader {
+.copyright, .price__item:nth-child(2) .price__var, .price__item:nth-child(2) div:first-of-type div, .price__item:nth-child(2), .price__item:first-of-type div:first-of-type, .style__col:last-of-type ul li, .preloader {
   display: flex;
 }
 
@@ -254,7 +254,7 @@ ul {
 .burger-menu span::before,
 .burger-menu span::after {
   display: block;
-  background-color: blueviolet;
+  background-color: white;
   height: 0.2rem;
   width: 100%;
   border-radius: 10rem;
@@ -318,45 +318,88 @@ ul {
   }
 }
 header {
+  background-color: var(--clr-background);
   position: absolute;
-  z-index: 30;
+  width: 100%;
+  z-index: 100;
 }
 
 .header__container {
-  grid-template-columns: 1fr max-content 1fr;
-  gap: 0;
-  align-items: stretch;
+  height: 100%;
+  display: flex;
   justify-content: space-between;
-  padding: 2rem clamp(2rem, 2rem + (1vw - 0.32rem) * 2.8409, 6rem);
-}
-
-nav ul {
-  flex-direction: row;
-  gap: clamp(2rem, 2rem + (1vw - 0.32rem) * 1.4205, 4rem);
-  align-items: stretch;
-  justify-content: center;
-  margin-top: 1.3rem;
-  font-size: 1.8rem;
+  padding: 0 clamp(2rem, 2rem + (1vw - 0.32rem) * 1.4205, 4rem);
+  margin-top: 2rem;
 }
 
 .logo {
   width: clamp(6rem, 6rem + (1vw - 0.32rem) * 2.8409, 10rem);
 }
 
-.navlink {
-  height: fit-content;
-  transition: color 300ms ease-in-out;
-}
-.navlink:hover {
-  color: #6015FF;
+nav {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  transform: scale(1, 0);
+  transform-origin: top;
+  transition: transform ease-in-out 300ms;
+  padding: 2rem 0;
 }
 
-@media (max-width: 1150px) {
+nav ul {
+  margin: auto;
+  padding: clamp(2rem, 2rem + (1vw - 0.32rem) * 1.4205, 4rem);
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  background-color: #0D0D0D;
+}
+
+.navlink {
+  padding: 1rem 0;
+  transition: color 300ms ease-in-out;
+  opacity: 0;
+  transition: opacity 100ms ease-in-out;
+  width: fit-content;
+}
+
+.navlink:hover {
+  color: blue;
+}
+
+.btn__wrap {
+  display: flex;
+  gap: 2rem;
+}
+
+.btn--primary {
+  display: none;
+}
+
+@media (min-width: 1024px) {
   .header__container {
-    grid-template-columns: 1fr max-content;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: 4rem;
+  }
+  .burger-menu {
+    display: none;
   }
   nav {
-    display: none;
+    all: unset;
+  }
+  .navlink {
+    opacity: 1;
+  }
+  nav ul {
+    flex-direction: row;
+    padding: 0;
+    gap: 3rem;
+    background-color: transparent;
+    justify-content: center;
+  }
+  .btn--primary {
+    display: block;
   }
 }
 .hero {
