--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -8,7 +8,15 @@
 		transition: color ease-in-out 300ms;
 
 		&:last-of-type {
-			margin-top: 1rem;
+			margin-top: 2rem;
+			border: solid .2rem $clr-baseNormal;
+			padding: 2rem 3rem 2.1rem;
+			border-radius: 10rem;
+			font-size: clamp(1.8rem, calc(1.8rem + ((1vw - 0.32rem) * 0.4261)), 2.4rem);
+			font-weight: 400;
+			&:hover {
+				border: solid .2rem $clr-light;
+			}
 		}
 
 		&:hover {
