--- a/scss/blocks/_vision.scss
+++ b/scss/blocks/_vision.scss
@@ -1,7 +1,7 @@
 .vision__quote {
 	font-size: 3.2rem;
 	font-weight: 800;
-	@extend %text-gradientHorizont;
+	color: $clr-metall;
 	@extend %text-center;
 }
 
